clang/test/BSC/Negative/OwnedStruct/destructor/owned_struct_in_struct_2/owned_struct_in_struct_2.cbs
// RUN: %clang_cc1 -verify %s

owned struct B {
};
owned struct A {
public:
    B b;  
};
void test(A a) {
    B b = a.b;
} // expected-error {{partially moved owned struct:`a` at scope end, a.b is moved}}